# so3_grid

./: .gitignore  CMakeLists.txt  Makefile  README.md  generate_some_covers  main.cpp
